src/test/ui/rfc-2126-extern-in-paths/non-existent-1.stderr
error[E0432]: unresolved import `extern::xcrate`
  --> $DIR/non-existent-1.rs:3:13
   |
LL | use extern::xcrate::S; //~ ERROR unresolved import `extern::xcrate`
   |             ^^^^^^ could not find `xcrate` in `extern`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
