src/test/ui/rfc-2126-extern-in-paths/non-existent-1.rs
#![feature(extern_in_paths)]

use extern::xcrate::S; //~ ERROR unresolved import `extern::xcrate`

fn main() {}
